IMPROVE - Replace the server API URL from the .env file to be globally accessible in the index.html file

--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en" dir="ltr">
   <head>
+    <script>
+      window.config = { apiUrl: 'http://92.205.178.113:801' };
+    </script>
     <!-- The first thing in any HTML file should be the charset -->
     <meta charset="utf-8">
     <!-- Make the page mobile compatible -->
