--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <script>
-      /* window.config = { apiUrl: 'http://160.153.234.244:901' }; */
-      window.config = { apiUrl: 'http://92.205.178.113:801' }; 
+      /* window.config = { apiUrl: 'http://160.153.234.244:901/' }; */
+      window.config = { apiUrl: 'http://92.205.178.113:801/' }; 
     </script>
     <!-- The first thing in any HTML file should be the charset -->
     <meta charset="utf-8">
