IMPROVE: layout - update main font

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <script>
       /* window.config = { apiUrl: 'http://160.153.234.244:901/' }; */
-      window.config = { apiUrl: 'http://localhost:5116/' }; //'http://92.205.178.113:801/'
+      window.config = { apiUrl: 'http://92.205.178.113:801/' }; //'http://92.205.178.113:801/'
     </script>
     <!-- The first thing in any HTML file should be the charset -->
     <meta charset="utf-8">
@@ -46,6 +46,11 @@
     <meta property="twitter:card" content="summary" />
     <meta property="twitter:image:src" content="/logo.jpg" />
     <style>
+      @font-face {
+        font-family: 'DINNextLTArabic';
+        src: url('/fonts/DINNextLTArabic.ttf');
+      }
+
       #app { position: absolute;top:0;left: 0;background: #fafafa;width: 100%;min-height: 100%;z-index: 1000; display: flex;}
       .preloader-init { position: absolute; top: calc(50% - 65px); left: calc(50% - 65px) }
     </style>
