Solve Errors in Employee import

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <script>
       /* window.config = { apiUrl: 'http://160.153.234.244:901/' }; */
-      window.config = { apiUrl: 'http://92.205.178.113:8081/' }; //'http://92.205.178.113:801/'
+      window.config = { apiUrl: 'http://localhost:5116/' }; //'http://92.205.178.113:801/'
     </script>
     <!-- The first thing in any HTML file should be the charset -->
     <meta charset="utf-8">
